Removed unused variable in SwitchPage method definition. Fixed an issue with most windows that were updated where they wouldn't be properly placed in the second row of the grid thus interfering with the top bar. Added a done button to the api page to take the user back to the dashboard page. Modified the Add/Modify Participant window to properly deal with new the new ui. Re-worked the TimingRawReads and TimingResults pages to allow for faster loads. - For this we removed the outer scrollviewer and instead don't allow the user to scroll horizontally. They'll need to make the screen larger to see what's on the right, which should be the less useful information.

--- a/ChronoKeep/UI/API/APIWindow.xaml
+++ b/ChronoKeep/UI/API/APIWindow.xaml
@@ -35,7 +35,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <Grid>
+        <Grid Grid.Row="1">
             <Frame x:Name="APIFrame" NavigationUIVisibility="Hidden" IsTabStop="False" />
         </Grid>
     </Grid>
