--- a/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ChangeMultiParticipantWindow.xaml
@@ -35,7 +35,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <StackPanel VerticalAlignment="Center">
+        <StackPanel VerticalAlignment="Center" Grid.Row="1">
             <TextBlock Text="Switch Participants to" FontSize="14" VerticalAlignment="Center" Width="210"/>
             <ComboBox Name="DistanceBox" Width="210" FontSize="16" Margin="10,5,10,5"/>
             <Grid>
