--- a/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
+++ b/ChronoKeep/UI/EventWindows/NewEventWindow.xaml
@@ -35,7 +35,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <StackPanel>
+        <StackPanel Grid.Row="1">
             <DockPanel>
                 <TextBlock Text="Name" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
                 <TextBox x:Name="nameBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Keyboard_Up" />
