--- a/ChronoKeep/UI/MainPages/APIPage.xaml
+++ b/ChronoKeep/UI/MainPages/APIPage.xaml
@@ -27,6 +27,7 @@
                 <Button Name="Add" Content="Add API" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" Click="Add_Click" />
                 <Button Name="UpdateBtn" Content="Update" Click="Update_Click" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" />
                 <Button Name="ResetBtn" Content="Reset" Click="Revert_Click" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" />
+                <Button Name="DoneBtn" Content="Done" Click="DoneBtn_Click" Margin="10,5,10,5" FontSize="16" Height="35" Width="150" />
             </DockPanel>
         </Grid>
     </Grid>
