--- a/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
+++ b/ChronoKeep/UI/Participants/ModifyParticipantWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Chronokeep.UI.Participants"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Participant" Height="575" Width="520" Closing="Window_Closing" ResizeMode="NoResize"
+        Title="Participant" Height="745" Width="520" Closing="Window_Closing" ResizeMode="NoResize"
         d:DataContext="{d:DesignInstance local:ModifyParticipantWindow, IsDesignTimeCreatable=True}"
         ExtendsContentIntoTitleBar="True"
         WindowBackdropType="Mica"
@@ -35,94 +35,87 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <StackPanel VerticalAlignment="Center">
+        <StackPanel VerticalAlignment="Center" Grid.Row="1">
             <DockPanel>
-                <TextBlock Text="Bib" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="BibBox" FontSize="16" Margin="0,5,5,5" Width="100" VerticalContentAlignment="Center" KeyDown="Box_KeyDown"/>
-                <ComboBox Name="DistanceBox" FontSize="16" Margin="0,5,5,5"/>
+                <TextBlock Text="Bib" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="BibBox" FontSize="16" Margin="0,5,15,5" Width="100" VerticalContentAlignment="Center" KeyDown="Box_KeyDown"/>
+                <ComboBox Name="DistanceBox" FontSize="16" Margin="0,5,15,5"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="First" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="FirstBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="First" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="FirstBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Last" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="LastBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Last" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="LastBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Birthday" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <DatePicker Name="BirthdayBox" FontSize="16" Margin="0,5,5,5" Width="130" KeyDown="Box_KeyDown" VerticalContentAlignment="Center"/>
-                <TextBlock Text="Age" FontSize="16" Margin="0,0,5,0" Width="45" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="AgeBox" FontSize="16" Margin="0,5,5,5" Width="40" KeyDown="Box_KeyDown" VerticalContentAlignment="Center"/>
-                <TextBlock Text="Gender" FontSize="16" Margin="0,0,5,0" Width="70" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <ComboBox Name="GenderBox" FontSize="16" Margin="0,5,5,5" SelectionChanged="GenderBox_SelectionChanged">
+                <TextBlock Text="Birthday" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <DatePicker Name="BirthdayBox" FontSize="16" Margin="0,5,15,5" Width="260" KeyDown="Box_KeyDown" VerticalContentAlignment="Center"/>
+                <TextBlock Text="Age" FontSize="16" Margin="0,0,5,0" Width="45" VerticalAlignment="Center"/>
+                <TextBox Name="AgeBox" FontSize="16" Margin="0,5,5,5" Width="60" KeyDown="Box_KeyDown" VerticalContentAlignment="Center"/>
+            </DockPanel>
+            <DockPanel>
+                <TextBlock Text="Gender" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <ComboBox Name="GenderBox" FontSize="16" Margin="0,5,15,5" Width="200" SelectionChanged="GenderBox_SelectionChanged">
                     <ComboBoxItem Content="Man"/>
                     <ComboBoxItem Content="Woman"/>
                     <ComboBoxItem Content="Non-Binary"/>
                     <ComboBoxItem Content="Other"/>
                     <ComboBoxItem Content="Not Specified"/>
                 </ComboBox>
-            </DockPanel>
-            <DockPanel Name="otherGenderPanel" HorizontalAlignment="Right">
-                <TextBlock Text="Gender" FontSize="16" Margin="0,5,5,5" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="otherGenderBox" FontSize="16" Margin="0,5,5,5" Width="100" KeyDown="Box_KeyDown" Height="25"/>
+                <TextBox Name="otherGenderBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown" HorizontalAlignment="Stretch"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Street" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="StreetBox" FontSize="16" Margin="0,5,5,5" Width="180" KeyDown="Box_KeyDown"/>
-                <TextBlock Text="Appartment" FontSize="16" Margin="0,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="Street2Box" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Street" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="StreetBox" FontSize="16" Margin="0,5,15,5" Width="180" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Appartment" FontSize="16" Margin="0,0,5,0" Width="100" VerticalAlignment="Center"/>
+                <TextBox Name="Street2Box" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="City" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="CityBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="City" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="CityBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="State" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="StateBox" FontSize="16" Margin="0,5,5,5" Width="180" KeyDown="Box_KeyDown"/>
-                <TextBlock Text="Zip" FontSize="16" Margin="0,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="ZipBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="State" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="StateBox" FontSize="16" Margin="0,5,15,5" Width="180" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Zip" FontSize="16" Margin="0,0,5,0" Width="70" VerticalAlignment="Center"/>
+                <TextBox Name="ZipBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Country" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="CountryBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Country" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="CountryBox" FontSize="16" Margin="0,5,15,5" Width="180" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Private" FontSize="16" Margin="0,0,5,0" Width="70" VerticalAlignment="Center" />
+                <CheckBox Name="AnonymousBox" Margin="0,5,15,5" VerticalContentAlignment="Center"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Email" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="EmailBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Email" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="EmailBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Phone" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="MobileBox" FontSize="16" Margin="0,5,5,5" Width="140" KeyDown="Box_KeyDown"/>
-                <TextBlock Text="Parent" FontSize="16" Margin="0,0,0,0" Width="80" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="ParentBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Phone" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="MobileBox" FontSize="16" Margin="0,5,15,5" Width="140" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Parent" FontSize="16" Margin="0,0,0,0" Width="80" VerticalAlignment="Center"/>
+                <TextBox Name="ParentBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="EC Name" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="ECNameBox" FontSize="16" Margin="0,5,5,5" Width="140" KeyDown="Box_KeyDown"/>
-                <TextBlock Text="EC Phone" FontSize="16" Margin="0,0,0,0" Width="80" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="ECPhoneBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="EC Name" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="ECNameBox" FontSize="16" Margin="0,5,15,5" Width="140" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="EC Phone" FontSize="16" Margin="0,0,0,0" Width="80" VerticalAlignment="Center"/>
+                <TextBox Name="ECPhoneBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Comments" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="CommentsBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Comments" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="CommentsBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
             <DockPanel>
-                <TextBlock Text="Other" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center"/>
-                <TextBox Name="OtherBox" FontSize="16" Margin="0,5,5,5" KeyDown="Box_KeyDown"/>
+                <TextBlock Text="Other" FontSize="16" Margin="15,0,5,0" Width="90" VerticalAlignment="Center"/>
+                <TextBox Name="OtherBox" FontSize="16" Margin="0,5,15,5" KeyDown="Box_KeyDown"/>
             </DockPanel>
-            <DockPanel>
-                <TextBlock Text="Private" FontSize="16" Margin="5,0,5,0" Width="100" HorizontalAlignment="Right" VerticalAlignment="Center" />
-                <CheckBox Name="AnonymousBox" Margin="0,5,5,5" VerticalContentAlignment="Center"/>
-            </DockPanel>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <Button Name="Add" Content="Add" Height="35" FontSize="16" Margin="10,5,10,10" Grid.Column="0"/>
-                <Button Name="Done" Content="Done" Height="35" FontSize="16" Margin="10,5,10,10" Click="Done_Click" Grid.Column="1"/>
-            </Grid>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button Name="Add" Content="Add" Height="35" Width="150" FontSize="16" Margin="10,5,10,10"/>
+                <Button Name="Done" Content="Done" Height="35" Width="150" FontSize="16" Margin="10,5,10,10" Click="Done_Click"/>
+            </StackPanel>
         </StackPanel>
     </Grid>
 </ui:UiWindow>
