--- a/ChronoKeep/UI/Timing/Import/ImportLogWindow.xaml
+++ b/ChronoKeep/UI/Timing/Import/ImportLogWindow.xaml
@@ -35,7 +35,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <Grid>
+        <Grid Grid.Row="1">
             <Frame x:Name="Frame"  NavigationUIVisibility="Hidden" IsTabStop="False" />
         </Grid>
     </Grid>
