--- a/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
+++ b/ChronoKeep/UI/Timing/ManualEntryWindow.xaml
@@ -37,7 +37,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <StackPanel VerticalAlignment="Center">
+        <StackPanel VerticalAlignment="Center" Grid.Row="1">
             <DockPanel>
                 <TextBlock Text="Bib" Margin="10,10,0,10" FontSize="16" Width="80" TextAlignment="Right"/>
                 <TextBox Name="BibBox" FontSize="16" Margin="5,10,10,10" TextWrapping="Wrap" KeyUp="Enter_KeyDown" PreviewTextInput="NumberValidation" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
