--- a/ChronoKeep/UI/Timing/SetTimeWindow.xaml
+++ b/ChronoKeep/UI/Timing/SetTimeWindow.xaml
@@ -37,7 +37,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <StackPanel VerticalAlignment="Center">
+        <StackPanel VerticalAlignment="Center" Grid.Row="1">
             <TextBlock Text="Set Time To" FontSize="18" VerticalAlignment="Center" TextAlignment="Center"/>
             <RadioButton Name="NowTimeRadioButton" Margin="30,5,30,5" VerticalContentAlignment="Center" GroupName="TimeGroup" Content="Now" FontSize="14" IsChecked="True"/>
             <RadioButton Name="SpecificTimeRadioButton" Margin="30,5,30,5" VerticalContentAlignment="Center" GroupName="TimeGroup" HorizontalAlignment="Stretch">
