--- a/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
@@ -13,60 +13,72 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="45" />
         </Grid.RowDefinitions>
-        <ScrollViewer x:Name="scrollViewer" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Row="0">
-            <StackPanel>
-                <ListView x:Name="updateListView" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" VerticalContentAlignment="Top" SelectionMode="Extended" FontSize="12" PreviewMouseWheel="updateListView_PreviewMouseWheel">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="40"/>
-                                    <ColumnDefinition Width="80"/>
-                                    <ColumnDefinition Width="80"/>
-                                    <ColumnDefinition Width="60"/>
-                                    <ColumnDefinition Width="140"/>
-                                    <ColumnDefinition Width="160"/>
-                                    <ColumnDefinition Width="100"/>
-                                    <ColumnDefinition Width="60"/>
-                                    <ColumnDefinition Width="60"/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Box}"/>
-                                <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding LocationName}"/>
-                                <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding ChipNumber}"/>
-                                <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Bib}"/>
-                                <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Name}"/>
-                                <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding TimeString}"/>
-                                <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding NetTime}"/>
-                                <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding StatusName}"/>
-                                <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding TypeName}"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-                <Grid PreviewMouseWheel="updateListView_PreviewMouseWheel" Margin="5,4">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="40"/>
-                        <ColumnDefinition Width="80"/>
-                        <ColumnDefinition Width="80"/>
-                        <ColumnDefinition Width="60"/>
-                        <ColumnDefinition Width="140"/>
-                        <ColumnDefinition Width="160"/>
-                        <ColumnDefinition Width="100"/>
-                        <ColumnDefinition Width="60"/>
-                        <ColumnDefinition Width="60"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBlock Grid.Column="0" Margin="4,4" Text="Box"/>
-                    <TextBlock Grid.Column="1" Margin="4,4" Text="Location"/>
-                    <TextBlock Grid.Column="2" Margin="4,4" Text="Chip"/>
-                    <TextBlock Grid.Column="3" Margin="4,4" Text="Bib"/>
-                    <TextBlock Grid.Column="4" Margin="4,4" Text="Name"/>
-                    <TextBlock Grid.Column="5" Margin="4,4" Text="Clock"/>
-                    <TextBlock Grid.Column="6" Margin="4,4" Text="Net Time"/>
-                    <TextBlock Grid.Column="7" Margin="4,4" Text="Status"/>
-                    <TextBlock Grid.Column="8" Margin="4,4" Text="Type"/>
-                </Grid>
-            </StackPanel>
-        </ScrollViewer>
+        <Grid Grid.Row="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*" />
+                <RowDefinition Height="30" />
+            </Grid.RowDefinitions>
+            <ListView 
+                    x:Name="updateListView" 
+                    VerticalAlignment="Stretch" 
+                    HorizontalAlignment="Stretch"
+                    VerticalContentAlignment="Top"
+                    SelectionMode="Extended" 
+                    FontSize="12"
+                    ScrollViewer.CanContentScroll="True"
+                    ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                    Grid.Row="0"
+                    >
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="40"/>
+                                <ColumnDefinition Width="80"/>
+                                <ColumnDefinition Width="80"/>
+                                <ColumnDefinition Width="60"/>
+                                <ColumnDefinition Width="140"/>
+                                <ColumnDefinition Width="160"/>
+                                <ColumnDefinition Width="100"/>
+                                <ColumnDefinition Width="60"/>
+                                <ColumnDefinition Width="60"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Margin="4,4" Text="{Binding Box}"/>
+                            <TextBlock Grid.Column="1" Margin="4,4" Text="{Binding LocationName}"/>
+                            <TextBlock Grid.Column="2" Margin="4,4" Text="{Binding ChipNumber}"/>
+                            <TextBlock Grid.Column="3" Margin="4,4" Text="{Binding Bib}"/>
+                            <TextBlock Grid.Column="4" Margin="4,4" Text="{Binding Name}"/>
+                            <TextBlock Grid.Column="5" Margin="4,4" Text="{Binding TimeString}"/>
+                            <TextBlock Grid.Column="6" Margin="4,4" Text="{Binding NetTime}"/>
+                            <TextBlock Grid.Column="7" Margin="4,4" Text="{Binding StatusName}"/>
+                            <TextBlock Grid.Column="8" Margin="4,4" Text="{Binding TypeName}"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <Grid Margin="5,0" Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="40"/>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition Width="60"/>
+                    <ColumnDefinition Width="140"/>
+                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="100"/>
+                    <ColumnDefinition Width="60"/>
+                    <ColumnDefinition Width="60"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Margin="4,4" Text="Box"/>
+                <TextBlock Grid.Column="1" Margin="4,4" Text="Location"/>
+                <TextBlock Grid.Column="2" Margin="4,4" Text="Chip"/>
+                <TextBlock Grid.Column="3" Margin="4,4" Text="Bib"/>
+                <TextBlock Grid.Column="4" Margin="4,4" Text="Name"/>
+                <TextBlock Grid.Column="5" Margin="4,4" Text="Clock"/>
+                <TextBlock Grid.Column="6" Margin="4,4" Text="Net Time"/>
+                <TextBlock Grid.Column="7" Margin="4,4" Text="Status"/>
+                <TextBlock Grid.Column="8" Margin="4,4" Text="Type"/>
+            </Grid>
+        </Grid>
         <DockPanel LastChildFill="False" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button Name="DeleteButton" Content="Delete" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="DeleteButton_Click"/>
             <Button Name="IgnoreButton" Content="Ignore" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="IgnoreButton_Click"/>
