--- a/ChronoKeep/UI/Timing/WaveWindow.xaml
+++ b/ChronoKeep/UI/Timing/WaveWindow.xaml
@@ -35,7 +35,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <Grid>
+        <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="35"/>
