--- a/ChronoKeep/UI/UHF RFID Reader/ChipPersonWindow.xaml
+++ b/ChronoKeep/UI/UHF RFID Reader/ChipPersonWindow.xaml
@@ -37,7 +37,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <Grid>
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*" />
                 <ColumnDefinition Width="1*" />
