--- a/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
+++ b/ChronoKeep/UI/Announcer/AnnouncerWindow.xaml
@@ -16,11 +16,11 @@
         >
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="30" />
             <RowDefinition Height="35" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <ui:TitleBar
-            Grid.Row="0">
+        <ui:TitleBar Grid.Row="0">
             <ui:TitleBar.Tray>
                 <ui:NotifyIcon
                     FocusOnLeftClick="True"
@@ -36,7 +36,7 @@
                 </ui:NotifyIcon>
             </ui:TitleBar.Tray>
         </ui:TitleBar>
-        <Grid Grid.Row="0" Margin="8,0" x:Name="AnnouncerHeader" Visibility="Collapsed">
+        <Grid Grid.Row="1" Margin="8,0" x:Name="AnnouncerHeader" Visibility="Collapsed">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100" />
                 <ColumnDefinition Width="150" />
@@ -54,7 +54,7 @@
             <TextBlock Grid.Column="5" Text="Age G" FontSize="20" Margin="4,4" />
             <TextBlock Grid.Column="6" Text="Comments" FontSize="20" Margin="4,4" />
         </Grid>
-        <Grid Grid.Row="0" Margin="8,0" x:Name="ResultsHeader">
+        <Grid Grid.Row="1" Margin="8,0" x:Name="ResultsHeader">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="170" />
                 <ColumnDefinition Width="80" />
@@ -68,7 +68,7 @@
             <TextBlock Grid.Column="3" Text="Name" FontSize="20" Margin="4,4" />
             <TextBlock Grid.Column="4" Text="Age G" FontSize="20" Margin="4,4" />
         </Grid>
-        <ListView Grid.Row="1" x:Name="AnnouncerBox" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Visibility="Collapsed">
+        <ListView Grid.Row="2" x:Name="AnnouncerBox" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Visibility="Collapsed">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
@@ -92,7 +92,7 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <ListView Grid.Row="1"  x:Name="ResultsBox" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+        <ListView Grid.Row="2" x:Name="ResultsBox" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid>
