--- a/ChronoKeep/Updates/DownloadWindow.xaml
+++ b/ChronoKeep/Updates/DownloadWindow.xaml
@@ -6,10 +6,16 @@
         xmlns:local="clr-namespace:Chronokeep.Updates"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="Chronokeep Update" Height="200" Width="400" ResizeMode="NoResize" Closing="Window_Closing">
+        Title="Chronokeep Update" Height="200" Width="400" ResizeMode="NoResize" Closing="Window_Closing"
+        d:DataContext="{d:DesignInstance local:DownloadWindow, IsDesignTimeCreatable=True}"
+        ExtendsContentIntoTitleBar="True"
+        WindowBackdropType="Mica"
+        WindowCornerPreference="Round"
+        WindowStartupLocation="CenterScreen"
+        >
     <StackPanel VerticalAlignment="Center">
         <StackPanel Name="UpdatePanel">
-            <Label Name="DownloadLabel" Content="Update Available" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+            <TextBlock Name="DownloadLabel" Text="Update Available" FontSize="15" VerticalAlignment="Center" HorizontalAlignment="Center"/>
             <ProgressBar Name="DownloadProgress" Height="20" Margin="10,0,10,0" />
         </StackPanel>
         <Button x:Name="BackupDatabaseButton" Content="Backup Database" Height="30" Width="170" Visibility="Collapsed" Margin="0,10,0,0" Click="BackupDatabaseButton_Click"/>
